--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.7.4",
     "element-plus": "^2.8.0",
+    "fs": "^0.0.1-security",
     "vue": "^3.4.37",
     "vue-router": "^4.4.3"
   },
